# wrc

./: .gitignore  README.md  jest.config.js  package.json  tsconfig.json
contracts/atomic-asset-rust/: Cargo.toml  README.md  build.sh  package.json  tsconfig.json  utils.js
contracts/atomic-asset-rust/bindings/: atomic-asset-js-binding.ts
contracts/atomic-asset-rust/helpers/: helpers.ts
contracts/atomic-asset-rust/scripts/: deploy.js  get-balance.js  get-full-state.js  interact-transfer-from.js  interact-transfer.js  jump-transfers.js
contracts/atomic-asset-rust/src/: action.rs  contract.rs  error.rs  lib.rs  state.rs
contracts/atomic-asset-rust/src/actions/: allowances.rs  balance.rs  evolve.rs  mod.rs  transfers.rs
contracts/atomic-asset-rust/tests/: atomic-asset.spec.ts
contracts/erc20/: .gitignore  Cargo.toml  README.md  package.json  utils.js
contracts/erc20/bindings/: erc20-js-binding.ts
contracts/erc20/scripts/: deploy.js  get-balance.js  get-full-state.js  interact-transfer-from.js  interact-transfer.js  jump-transfers.js
contracts/erc20/scripts/tmp/: testnet_contract-tx-id.txt
contracts/erc20/src/: action.rs  contract.rs  error.rs  lib.rs  state.rs
contracts/erc20/src/actions/: allowances.rs  balance.rs  evolve.rs  mod.rs  transfers.rs
contracts/erc20/tests/: erc20.spec.ts
contracts/pst/: Cargo.toml  README.md  build.sh  package.json  tsconfig.json  utils.js
contracts/pst/scripts/: deploy.js  get-balance.js  get-full-state.js  interact-transfer.js
contracts/pst/src/: action.rs  contract.rs  error.rs  lib.rs  state.rs
contracts/pst/src/actions/: balance.rs  (+4 more)
contracts/pst/tests/: contract.spec.ts
(+167 files in other folders)
