[package]
name = "warp-atomic-erc20"
version = "0.1.0"
authors = ["RedStone"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
warp_wasm_utils = "0.1.0"
wasm-bindgen-futures = { version = "0.4.29" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3.56"

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
demangle-name-section = false
