[package]
name = "smartweave-contract"
version = "0.1.0"
authors = ["Sample smartweave contract"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.84"
wasm-bindgen-futures = "=0.4.34"
serde-wasm-bindgen = "=0.5.0"
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3.61"
warp-contracts = { version = "0.1.2" }